@@ -72,11 +72,12 @@ munin (work)
     * Added new plugin linux/forks, to graph forks per second.
     * The linux/iostat plugin now ignores devices without traffic (Deb#267195).
     * Changed a lot of plugins so they use DERIVE instead of COUNTER.
+    * Upped generic/ntp_ to auto family.
 
   - Installation
     * Changed variable name of ARCH to OSTYPE, to avoid name crash on newer
       FreeBSDs (SF#1068238).
-	* Added variable PYTHON, as we now have our first Python plugin.
+    * Added variable PYTHON, as we now have our first Python plugin.
 
 munin (1.1.4)
 
